--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,6 +43,7 @@
   },
   "devDependencies": {
     "autoprefixer": "^9.8.6",
+    "dotenv": "^10.0.0",
     "postcss": "^7.0.35",
     "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
   },
