--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -7,9 +7,15 @@ django-rest-auth==0.9.5
 django-rest-knox==4.1.0
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
+et-xmlfile==1.1.0
+numpy==1.21.0
+openpyxl==3.0.7
+pandas==1.2.5
 pycparser==2.20
 PyJWT==1.7.1
+python-dateutil==2.8.1
 pytz==2021.1
 six==1.16.0
 sqlparse==0.4.1
 typing-extensions==3.10.0.0
+xlrd==2.0.1
