--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,7 @@ Django==3.2.4
 django-cors-headers==3.7.0
 django-rest-auth==0.9.5
 django-rest-knox==4.1.0
+django-rest-passwordreset==1.2.0
 djangorestframework==3.12.4
 djangorestframework-jwt==1.11.0
 et-xmlfile==1.1.0
