--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,8 @@
     "redux": "^4.1.0",
     "redux-devtools-extension": "^2.13.9",
     "styled-components": "^5.3.0",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "yarn": "^1.22.10"
   },
   "scripts": {
     "start": "craco start",
