--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "redux-persist": "^6.0.0",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
+    "tailwind-scrollbar-hide": "^1.0.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
