--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "redux-actions": "^2.6.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-persist": "^6.0.0",
+    "redux-saga": "^1.1.3",
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "tailwind-scrollbar-hide": "^1.0.3",
