--- a/frontend/.prettierrc
+++ b/frontend/.prettierrc
@@ -1,8 +1,9 @@
 {
-  "singleQuote": true,
+  "singleQuote": false,
   "semi": true,
   "useTabs": false,
   "tabWidth": 2,
   "trailingComma": "all",
-  "printWidth": 80
+  "printWidth": 80,
+  "endOfLine": "auto"
 }
