--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@types/jest": "^27.0.2",
+    "@types/node": "^16.10.2",
+    "@types/react": "^17.0.27",
+    "@types/react-dom": "^17.0.9",
     "axios": "^0.21.1",
     "http-proxy-middleware": "^2.0.0",
     "react": "^17.0.2",
@@ -25,6 +29,7 @@
     "redux-thunk": "^2.3.0",
     "styled-components": "^5.3.0",
     "tailwind-scrollbar-hide": "^1.0.3",
+    "typescript": "^4.4.3",
     "web-vitals": "^1.0.1",
     "yarn": "^1.22.10"
   },
@@ -53,10 +58,17 @@
     ]
   },
   "devDependencies": {
-    "autoprefixer": "^9.8.6",
+    "@types/react-router-dom": "^5.3.0",
+    "autoprefixer": "^9",
+    "craco-alias": "^3.0.1",
     "dotenv": "^10.0.0",
-    "postcss": "^7.0.35",
-    "tailwindcss": "npm:@tailwindcss/postcss7-compat@^2.1.4"
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-prettier": "^4.0.0",
+    "postcss": "^7",
+    "prettier": "^2.4.1",
+    "tailwindcss": "npm:@tailwindcss/postcss7-compat"
   },
   "proxy": "http://localhost:8000/"
 }
